@@ -35,7 +35,7 @@ requires:
   perl: 5.8.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Tags
-  homepage: https://github.com/tupinek/Tags
+  homepage: https://github.com/michal-josef-spacek/Tags
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Tags
+  repository: git://github.com/michal-josef-spacek/Tags
 version: '0.08'
