@@ -25,8 +25,8 @@ requires 'Readonly' => 0;
 requires 'perl' => '5.8.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Tags';
-resources 'homepage' => 'https://github.com/tupinek/Tags';
-resources 'repository' => 'git://github.com/tupinek/Tags';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Tags';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Tags';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0.22;
 test_requires 'File::Object' => 0.03;
