@@ -32,7 +32,7 @@ SEE ALSO
         Install the Tags modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Tags>
+    <https://github.com/michal-josef-spacek/Tags>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
